--- a/index.html
+++ b/index.html
@@ -5,13 +5,15 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <title>Document</title>
 </head>
 
 <body>
     <div class="backest">
-
+        <svg id="wave" style="transform:rotate(180deg); transition: 0.3s" viewBox="0 0 1440 490" version="1.1" xmlns="http://www.w3.org/2000/svg"><defs><linearGradient id="sw-gradient-0" x1="0" x2="0" y1="1" y2="0"><stop stop-color="rgba(255, 255, 255, 0.16)" offset="0%"></stop><stop stop-color="rgba(246.31, 246.31, 246.31, 0.68)" offset="100%"></stop></linearGradient></defs><path style="transform:translate(0, 0px); opacity:1" fill="url(#sw-gradient-0)" d="M0,147L20,122.5C40,98,80,49,120,49C160,49,200,98,240,163.3C280,229,320,310,360,326.7C400,343,440,294,480,236.8C520,180,560,114,600,130.7C640,147,680,245,720,294C760,343,800,343,840,326.7C880,310,920,278,960,236.8C1000,196,1040,147,1080,171.5C1120,196,1160,294,1200,310.3C1240,327,1280,261,1320,253.2C1360,245,1400,294,1440,285.8C1480,278,1520,212,1560,220.5C1600,229,1640,310,1680,359.3C1720,408,1760,425,1800,408.3C1840,392,1880,343,1920,343C1960,343,2000,392,2040,408.3C2080,425,2120,408,2160,351.2C2200,294,2240,196,2280,187.8C2320,180,2360,261,2400,294C2440,327,2480,310,2520,253.2C2560,196,2600,98,2640,57.2C2680,16,2720,33,2760,32.7C2800,33,2840,16,2860,8.2L2880,0L2880,490L2860,490C2840,490,2800,490,2760,490C2720,490,2680,490,2640,490C2600,490,2560,490,2520,490C2480,490,2440,490,2400,490C2360,490,2320,490,2280,490C2240,490,2200,490,2160,490C2120,490,2080,490,2040,490C2000,490,1960,490,1920,490C1880,490,1840,490,1800,490C1760,490,1720,490,1680,490C1640,490,1600,490,1560,490C1520,490,1480,490,1440,490C1400,490,1360,490,1320,490C1280,490,1240,490,1200,490C1160,490,1120,490,1080,490C1040,490,1000,490,960,490C920,490,880,490,840,490C800,490,760,490,720,490C680,490,640,490,600,490C560,490,520,490,480,490C440,490,400,490,360,490C320,490,280,490,240,490C200,490,160,490,120,490C80,490,40,490,20,490L0,490Z"></path></svg>
         <div class="back">
+
             <div class="outerAdviseNumber">
                 <p class="adviseNumber" id="adviseNumber">113</p>
             </div>
@@ -19,8 +21,8 @@
                 <p class="adviseText" id="adviseText">"life is great , your mindset is shit"</p>
             </div>
             <div class="divider" id="divider"></div>
-            <div class="outerRandButton"><button class="randomButton" id="randomButton" onclick="apiCall()">
-                <svg width="24" height="24" xmlns="http://www.w3.org/2000/svg">
+            <div class="outerRandButton"><button class="randomButton" id="randomButton" onclick="revive()">
+                <svg width="24" height="24" xmlns="http://www.w3.org/2000/svg" class="rotate">
                     <path d="M20 0H4a4.005 4.005 0 0 0-4 4v16a4.005 4.005 0 0 0 4 4h16a4.005 4.005 0 0 0 4-4V4a4.005 4.005 0 0 0-4-4ZM7.5 18a1.5 1.5 0 1 1 0-3 1.5 1.5 0 0 1 0 3Zm0-9a1.5 1.5 0 1 1 0-3 1.5 1.5 0 0 1 0 3Zm4.5 4.5a1.5 1.5 0 1 1 0-3 1.5 1.5 0 0 1 0 3Zm4.5 4.5a1.5 1.5 0 1 1 0-3 1.5 1.5 0 0 1 0 3Zm0-9a1.5 1.5 0 1 1 0-3 1.5 1.5 0 0 1 0 3Z" fill="#202733"/>
                 </svg>
             </button>
